frontend/src/main.css
html,body {height:100%; }

a {text-decoration: none;}

body { 
    margin-left: 0;
    font-family: "Roboto Mono";
    background-color: #1D263B;
    color: #ffffff;
}

.intro-title{
    text-align: center;
    margin-top: 3.5em;
    margin-bottom: 2.5em;
    font-size: 3.5em;
}

@media only screen and (width >= 1750px) and (height >= 850px) {

    .intro{display: inline-flex;}
    
    .photo-self{
        padding-left: 5%;
        padding-right: 5%;
        margin-bottom: 10%;
        max-width: 50%;
        max-height: 60vh;
    }
    .body{
        text-align: left;
        margin-left: 5%;
        margin-right: 5%;
        font-size: 2.7em;
    }
}

@media screen and (width < 1750px),
    screen and (height < 850px){

    .photo-self{
        display: block;
        margin-left: auto;
        margin-right: auto;
        margin-bottom: 5%;
        max-height: 85vh;
    }

    .body{
        margin-left: 5%;
        margin-right: 5%;
        font-size: 2em;
    }

    .intro-title{font-size: 2.5em;}

    .title{font-size: 2.5em;}
}

@media screen and (width < 615px){

    .photo-self{
        margin-bottom: 10%;
        max-height: 60vh;
    }

    .body{
        text-align: left;
        margin-left: 5%;
        margin-right: 5%;
        font-size: 1.3em;
    }

    
}

.title{
    text-align: center;
    margin-bottom: 2em;
    font-size: 3em;
}

.nav-bar{
    display: flex;
    justify-content: right;
    position: fixed;
    background-color: black;
    top: 0;
    width: 100%;
}

.nav-btns button{
    color: #ffffff;
    background-color: black;
    font-family: "Roboto Mono";
    height: 8vh;
    border-style: none;
    font-size: 1.5em;
    padding-right: 1em;
}

.nav-btns button:hover {
    background-color: #ffffff;
    color: black;
}

.scroll-top{
    background-color: rgba(46, 48, 47, 0.856);
    color: #ffffff;
    width: 24%;
    height: 3vh;
    position: fixed;
    bottom: 5%;
    left: 38%
}

.contact h1{
    margin-left: 3%;
    margin-bottom: 3%;
}

.contact button{
    margin-left: 79%;
    margin-bottom: 1%;
    padding-left: .5em;
    padding-right: .5em;
    width: fit-content;
    height: fit-content;
    color: #ffffff;
    background-color: black;
    font-family: "Roboto Mono";
    font-size: 1.5em;
}

.contact{
    margin-top: 5%;
    margin-left: 2%;
    margin-right: 2%;
    padding-left: 2%;
    padding-right: 2%;
    padding-bottom: 1%;  
    
}

.contact-name, .contact-subject{
    background-color: #5C6784;
    color: black;
    font-size: 1.5em;
    font-family: "Roboto Mono";
    margin-left: 3%;
    margin-bottom: 2%;
    width: 70%;
    height: 4vh;
    padding-left: 1%;
}

.contact-message{
    background-color: #5C6784;
    color: black;
    font-size: 1.5em;
    font-family: "Roboto Mono";
    margin-left: 3%;
    margin-bottom: 2%;
    width: 80%;
    height: 200px;
    padding-left: 1%;
    line-height: 200%;
}

::placeholder{color: black;}

:focus::placeholder {color: transparent;}

.footer{
    padding-top: 5%;
    padding-bottom: 15%;
    font-size: 1.2em;
    text-align: center;
}
.hamburger-react{z-index: 1;}

.menu{
    position: absolute;
    top: 0;
    width: 75%;
    min-height: 100vh;
    background-color: rgba(46, 48, 47, 0.856);
}

.hidden{
    visibility: hidden;
    opacity: 0;
    transition: visibility 0s .2s, opacity .2s linear;
}

.visible{
    left: -75%;
    animation-name: slide-menu-in;
    animation-duration: .4s;
    animation-fill-mode: forwards;
}

.mobile-nav-btns button{
    height: 17vh;
    width: 100%;
    display: block;
    border-style: none;
    background-color: rgba(46, 48, 47, 0.856);
    color: #ffffff;
    font-family: "Roboto Mono";
    font-size: 2em;
}

.mobile-nav-btns button:hover {
    background-color: #ffffff;
    color: black;
}

@keyframes slide-menu-in {
    from{transform: translateX(0);}
    to{transform: translateX(100%);}
}

@keyframes fade-menu-out {
    from{transform: translateX(100%);}
    to{transform: translateX(-100%);}
}

.return-btn{
    background-color: rgba(46, 48, 47, 0.856);
    color: #ffffff;
    width: 20em;
    height: 5vh;
    position: fixed;
    top: 3%;
    left: 3%;
}

